# ai-data-science-team

./: .gitignore  .pre-commit-config.yaml  CUSTOM_WORKFLOW.md  EDA智能体方案.md  FORK_FEATURES.md  INSTALLATION.md  MAKE_PRIVATE.md  PROJECT_FEATURES.md  README.md  SETUP_SUMMARY.md  UPGRADE_PLAN.md  USAGE_GUIDE.md  Untitled.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Ideas/: AIDataScienceTeamSetup.md  CryptoAuthIdea.md  H.A.V.E.md
ai_data_science_team/: cli.py
ai_data_science_team/agents/: data_cleaning_agent.py  data_loader_tools_agent.py  data_visualization_agent.py  data_wrangling_agent.py  feature_engineering_agent.py  sql_database_agent.py  workflow_planner_agent.py
ai_data_science_team/api/: __init__.py  app.py  cli.py  models.py  routes.py
ai_data_science_team/async_ops/: __init__.py  executor.py  parallel.py  utils.py
ai_data_science_team/cache/: __init__.py  backends.py  cache.py  decorators.py  keys.py
ai_data_science_team/connectors/: __init__.py  base.py  bigquery.py  factory.py  postgres.py  redshift.py  s3.py  snowflake.py
ai_data_science_team/ds_agents/: eda_tools_agent.py
ai_data_science_team/ml_agents/: h2o_ml_agent.py  mlflow_tools_agent.py
ai_data_science_team/multiagents/: pandas_data_analyst.py  sql_data_analyst.py  supervisor_ds_team.py
ai_data_science_team/plugins/: __init__.py  base.py  loader.py  registry.py
ai_data_science_team/templates/: agent_templates.py
ai_data_science_team/tools/: data_loader.py  eda.py  mlflow.py  sql.py
ai_data_science_team/utils/: pipeline.py  sandbox.py
apps/ai-pipeline-studio-app/: README.md  app.py
apps/exploratory-copilot-app/: app.py
apps/exploratory-copilot-app/backend/: README.md  main.py  requirements.txt  run.py
apps/exploratory-copilot-app/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/exploratory-copilot-app/frontend/src/: App.vue  main.js
apps/pandas-data-analyst-app/: app.py
apps/pandas-data-analyst-app/backend/: main.py  requirements.txt  run.py
apps/pandas-data-analyst-app/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/pandas-data-analyst-app/frontend/src/: App.vue
apps/supervisor-ds-team-app/: app.py
config/: __init__.py  api_keys.py  model_configs.py  test_config.py
config/utils/: __init__.py  env_loader.py
custom/: QUICKSTART.md  README.md
custom/agents/: TEMPLATE_agent.py  __init__.py  data_quality_agent.py  feature_importance_agent.py  model_comparison_agent.py  outlier_detection_agent.py  time_series_agent.py
custom/docs/: CUSTOM_EXTENSIONS_GUIDE.md
custom/examples/: README.md  api_server.py  cli_quality_check.py  streamlit_quality_checker.py  web_client.html
custom/tools/: __init__.py  data_quality.py  feature_importance.py  model_comparison.py  outlier_detection.py  time_series.py
examples/: data_cleaning_agent.ipynb  data_loader_tools_agent.ipynb  data_visualization_agent.ipynb  data_wrangling_agent.ipynb  feature_engineering_agent.ipynb
examples/ds_agents/: eda_tools_agent.ipynb
examples/ml_agents/: h2o_machine_learning_agent.ipynb
examples/multiagents/: pandas_data_analyst.ipynb
examples/teams_of_agents/: supervisor_ds_team.ipynb
planning_docs/apps/: pipeline_studio_plan.md
planning_docs/package_review/: data_cleaning_agent_review.md  langchain_conversation_plan.md  sandbox_plan.md
planning_docs/supervisor/: supervisor_team_plan.md
tests/: __init__.py  conftest.py
tests/fixtures/sample_data/: sample.csv
tests/integration/: test_end_to_end.py
tests/unit/: __init__.py  test_api.py  test_app_ui.py  test_async_ops.py  test_cache.py  test_connectors.py  test_plugins.py
tests/unit/test_agents/: test_data_cleaning_agent.py  test_data_visualization_agent.py  test_data_wrangling_agent.py
tests/unit/test_tools/: test_data_loader.py  test_eda.py
tests/unit/test_utils/: test_parsers.py  test_sandbox.py
